Lab-3/q2.output
Terminals unused in grammar

   ERR


Grammar

    0 $accept: statements $end

    1 statements: statements NEWLINE statement COLON
    2           | statement COLON

    3 statement: SELECT LT conditions GT LB TABLE RB
    4          | PROJECT LT attribute_lists GT LB TABLE RB
    5          | LB TABLE RB CARTESIAN_PRODUCT LB TABLE RB
    6          | LB TABLE RB EQUI_JOIN LT equi_conditions GT LB TABLE RB

    7 attribute_lists: attribute_lists COMMA TABLE
    8                | TABLE

    9 conditions: conditions OPERATOR condition
   10           | condition

   11 condition: EQUI_CONDITION
   12          | NOT temp
   13          | temp

   14 temp: TABLE COMPARE TABLE
   15     | TABLE COMPARE STR
   16     | TABLE LT TABLE
   17     | TABLE LT STR
   18     | TABLE GT TABLE
   19     | TABLE GT STR

   20 equi_conditions: equi_conditions OPERATOR EQUI_CONDITION
   21                | EQUI_CONDITION


Terminals, with rules where they appear

$end (0) 0
error (256)
PROJECT (258) 4
SELECT (259) 3
CARTESIAN_PRODUCT (260) 5
EQUI_JOIN (261) 6
NOT (262) 12
LT (263) 3 4 6 16 17
GT (264) 3 4 6 18 19
LB (265) 3 4 5 6
RB (266) 3 4 5 6
NEWLINE (267) 1
COLON (268) 1 2
TABLE (269) 3 4 5 6 7 8 14 15 16 17 18 19
OPERATOR (270) 9 20
COMPARE (271) 14 15
EQUI_CONDITION (272) 11 20 21
COMMA (273) 7
STR (274) 15 17 19
ERR (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
statements (22)
    on left: 1 2, on right: 0 1
statement (23)
    on left: 3 4 5 6, on right: 1 2
attribute_lists (24)
    on left: 7 8, on right: 4 7
conditions (25)
    on left: 9 10, on right: 3 9
condition (26)
    on left: 11 12 13, on right: 9 10
temp (27)
    on left: 14 15 16 17 18 19, on right: 12 13
equi_conditions (28)
    on left: 20 21, on right: 6 20


State 0

    0 $accept: . statements $end

    PROJECT  shift, and go to state 1
    SELECT   shift, and go to state 2
    LB       shift, and go to state 3

    statements  go to state 4
    statement   go to state 5


State 1

    4 statement: PROJECT . LT attribute_lists GT LB TABLE RB

    LT  shift, and go to state 6


State 2

    3 statement: SELECT . LT conditions GT LB TABLE RB

    LT  shift, and go to state 7


State 3

    5 statement: LB . TABLE RB CARTESIAN_PRODUCT LB TABLE RB
    6          | LB . TABLE RB EQUI_JOIN LT equi_conditions GT LB TABLE RB

    TABLE  shift, and go to state 8


State 4

    0 $accept: statements . $end
    1 statements: statements . NEWLINE statement COLON

    $end     shift, and go to state 9
    NEWLINE  shift, and go to state 10


State 5

    2 statements: statement . COLON

    COLON  shift, and go to state 11


State 6

    4 statement: PROJECT LT . attribute_lists GT LB TABLE RB

    TABLE  shift, and go to state 12

    attribute_lists  go to state 13


State 7

    3 statement: SELECT LT . conditions GT LB TABLE RB

    NOT             shift, and go to state 14
    TABLE           shift, and go to state 15
    EQUI_CONDITION  shift, and go to state 16

    conditions  go to state 17
    condition   go to state 18
    temp        go to state 19


State 8

    5 statement: LB TABLE . RB CARTESIAN_PRODUCT LB TABLE RB
    6          | LB TABLE . RB EQUI_JOIN LT equi_conditions GT LB TABLE RB

    RB  shift, and go to state 20


State 9

    0 $accept: statements $end .

    $default  accept


State 10

    1 statements: statements NEWLINE . statement COLON

    PROJECT  shift, and go to state 1
    SELECT   shift, and go to state 2
    LB       shift, and go to state 3

    statement  go to state 21


State 11

    2 statements: statement COLON .

    $default  reduce using rule 2 (statements)


State 12

    8 attribute_lists: TABLE .

    $default  reduce using rule 8 (attribute_lists)


State 13

    4 statement: PROJECT LT attribute_lists . GT LB TABLE RB
    7 attribute_lists: attribute_lists . COMMA TABLE

    GT     shift, and go to state 22
    COMMA  shift, and go to state 23


State 14

   12 condition: NOT . temp

    TABLE  shift, and go to state 15

    temp  go to state 24


State 15

   14 temp: TABLE . COMPARE TABLE
   15     | TABLE . COMPARE STR
   16     | TABLE . LT TABLE
   17     | TABLE . LT STR
   18     | TABLE . GT TABLE
   19     | TABLE . GT STR

    LT       shift, and go to state 25
    GT       shift, and go to state 26
    COMPARE  shift, and go to state 27


State 16

   11 condition: EQUI_CONDITION .

    $default  reduce using rule 11 (condition)


State 17

    3 statement: SELECT LT conditions . GT LB TABLE RB
    9 conditions: conditions . OPERATOR condition

    GT        shift, and go to state 28
    OPERATOR  shift, and go to state 29


State 18

   10 conditions: condition .

    $default  reduce using rule 10 (conditions)


State 19

   13 condition: temp .

    $default  reduce using rule 13 (condition)


State 20

    5 statement: LB TABLE RB . CARTESIAN_PRODUCT LB TABLE RB
    6          | LB TABLE RB . EQUI_JOIN LT equi_conditions GT LB TABLE RB

    CARTESIAN_PRODUCT  shift, and go to state 30
    EQUI_JOIN          shift, and go to state 31


State 21

    1 statements: statements NEWLINE statement . COLON

    COLON  shift, and go to state 32


State 22

    4 statement: PROJECT LT attribute_lists GT . LB TABLE RB

    LB  shift, and go to state 33


State 23

    7 attribute_lists: attribute_lists COMMA . TABLE

    TABLE  shift, and go to state 34


State 24

   12 condition: NOT temp .

    $default  reduce using rule 12 (condition)


State 25

   16 temp: TABLE LT . TABLE
   17     | TABLE LT . STR

    TABLE  shift, and go to state 35
    STR    shift, and go to state 36


State 26

   18 temp: TABLE GT . TABLE
   19     | TABLE GT . STR

    TABLE  shift, and go to state 37
    STR    shift, and go to state 38


State 27

   14 temp: TABLE COMPARE . TABLE
   15     | TABLE COMPARE . STR

    TABLE  shift, and go to state 39
    STR    shift, and go to state 40


State 28

    3 statement: SELECT LT conditions GT . LB TABLE RB

    LB  shift, and go to state 41


State 29

    9 conditions: conditions OPERATOR . condition

    NOT             shift, and go to state 14
    TABLE           shift, and go to state 15
    EQUI_CONDITION  shift, and go to state 16

    condition  go to state 42
    temp       go to state 19


State 30

    5 statement: LB TABLE RB CARTESIAN_PRODUCT . LB TABLE RB

    LB  shift, and go to state 43


State 31

    6 statement: LB TABLE RB EQUI_JOIN . LT equi_conditions GT LB TABLE RB

    LT  shift, and go to state 44


State 32

    1 statements: statements NEWLINE statement COLON .

    $default  reduce using rule 1 (statements)


State 33

    4 statement: PROJECT LT attribute_lists GT LB . TABLE RB

    TABLE  shift, and go to state 45


State 34

    7 attribute_lists: attribute_lists COMMA TABLE .

    $default  reduce using rule 7 (attribute_lists)


State 35

   16 temp: TABLE LT TABLE .

    $default  reduce using rule 16 (temp)


State 36

   17 temp: TABLE LT STR .

    $default  reduce using rule 17 (temp)


State 37

   18 temp: TABLE GT TABLE .

    $default  reduce using rule 18 (temp)


State 38

   19 temp: TABLE GT STR .

    $default  reduce using rule 19 (temp)


State 39

   14 temp: TABLE COMPARE TABLE .

    $default  reduce using rule 14 (temp)


State 40

   15 temp: TABLE COMPARE STR .

    $default  reduce using rule 15 (temp)


State 41

    3 statement: SELECT LT conditions GT LB . TABLE RB

    TABLE  shift, and go to state 46


State 42

    9 conditions: conditions OPERATOR condition .

    $default  reduce using rule 9 (conditions)


State 43

    5 statement: LB TABLE RB CARTESIAN_PRODUCT LB . TABLE RB

    TABLE  shift, and go to state 47


State 44

    6 statement: LB TABLE RB EQUI_JOIN LT . equi_conditions GT LB TABLE RB

    EQUI_CONDITION  shift, and go to state 48

    equi_conditions  go to state 49


State 45

    4 statement: PROJECT LT attribute_lists GT LB TABLE . RB

    RB  shift, and go to state 50


State 46

    3 statement: SELECT LT conditions GT LB TABLE . RB

    RB  shift, and go to state 51


State 47

    5 statement: LB TABLE RB CARTESIAN_PRODUCT LB TABLE . RB

    RB  shift, and go to state 52


State 48

   21 equi_conditions: EQUI_CONDITION .

    $default  reduce using rule 21 (equi_conditions)


State 49

    6 statement: LB TABLE RB EQUI_JOIN LT equi_conditions . GT LB TABLE RB
   20 equi_conditions: equi_conditions . OPERATOR EQUI_CONDITION

    GT        shift, and go to state 53
    OPERATOR  shift, and go to state 54


State 50

    4 statement: PROJECT LT attribute_lists GT LB TABLE RB .

    $default  reduce using rule 4 (statement)


State 51

    3 statement: SELECT LT conditions GT LB TABLE RB .

    $default  reduce using rule 3 (statement)


State 52

    5 statement: LB TABLE RB CARTESIAN_PRODUCT LB TABLE RB .

    $default  reduce using rule 5 (statement)


State 53

    6 statement: LB TABLE RB EQUI_JOIN LT equi_conditions GT . LB TABLE RB

    LB  shift, and go to state 55


State 54

   20 equi_conditions: equi_conditions OPERATOR . EQUI_CONDITION

    EQUI_CONDITION  shift, and go to state 56


State 55

    6 statement: LB TABLE RB EQUI_JOIN LT equi_conditions GT LB . TABLE RB

    TABLE  shift, and go to state 57


State 56

   20 equi_conditions: equi_conditions OPERATOR EQUI_CONDITION .

    $default  reduce using rule 20 (equi_conditions)


State 57

    6 statement: LB TABLE RB EQUI_JOIN LT equi_conditions GT LB TABLE . RB

    RB  shift, and go to state 58


State 58

    6 statement: LB TABLE RB EQUI_JOIN LT equi_conditions GT LB TABLE RB .

    $default  reduce using rule 6 (statement)
